src/components/layout.css
@import url("https://fonts.googleapis.com/css?family=Bebas+Neue");

:root {
  --mainBlue: #0152a0;
  --mainYellow: #ff9e09;
  --mainGrey: #d4d5d7;
  --mainWhite: rgb(255, 255, 255);
  --mainDark: #000;
}

body {
  background: var(--mainWhite);
  color: var(--mainDark);
  font-family: Verdana, Geneva, Tahoma, sans-serif !important;
}
/**More Padding styling */
.no-padding-sides {
  padding-right: 0 !important;
  padding-left: 0 !important;
}

.py-6 {
  padding-top: 6rem !important;
  padding-bottom: 6rem !important;
}

.pt-10 {
  padding-top: 10rem !important;
}

/**FOOTER */
.footer {
  background: var(--mainWhite);
}

.footerFont {
  font-size: 80%;
}

.link-footer {
  color: var(--mainDark);
  padding-left: 0;
}

.headerFont {
  font-family: "Bebas Neue" !important;
  letter-spacing: 4px;
}

/**HOME */

.homeBackground {
  background-image: url("../images/home_1.jpg");
  background-size: 100% auto;
  height: 85vh;
}

.iconBackground {
  background-image: url("../images/home_2.jpg");
  background-size: 100% auto;
  height: 95vh;
}

/**ABOUT */
.aboutBackground {
  background-image: url("../images/about_1.jpg");
  background-size: 100% auto;
  height: 80vh;
}

.text-white {
  color: var(--mainWhite);
}

.blue {
  color: var(--mainBlue);
}

.title {
  color: var(--mainDark);
  padding-right: 55%;
  padding-bottom: 25%;
}

.btn-blue {
  color: var(--mainBlue);
  border-color: var(--mainBlue);
}

.btn-blue:hover {
  background: var(--mainBlue);
  color: var(--mainWhite);
}

/**Contact Section on Index Page */

.contact-us {
  background: var(--mainBlue);
  color: var(--mainWhite);
}

.contact-us-button-padding {
  padding-top: 0.5rem;
}

.contact-us-button {
  background-color: var(--mainGrey);
  color: var(--mainWhite);
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

